<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mySnackId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/darkwave1"
    android:gravity="bottom"
    >

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close"
        android:textSize="15dp"
        android:backgroundTint="#070707"
        android:textColor="#81D4FA"
        android:layout_marginLeft="5dp"

        >
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Search Account Username ..."
            android:textSize="16dp"
            android:textColor="#150578"
            />

        <Button
            android:id="@+id/search_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textSize="15dp"
            android:backgroundTint="#070707"
            android:textColor="#81D4FA"
            android:layout_marginLeft="25dp"
            >
        </Button>

    </LinearLayout>

    <ListView
        android:id="@+id/accountNameList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"

        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

