...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/playerSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="View All Codes"
            android:layout_gravity="center"
            android:backgroundTint="#070707"
...
